Revisão de bootstrap

--- a/nivel.html
+++ b/nivel.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/jogo.css">
     
+    
 </head>
 <!--Colar o novo menu desktop em todas as outras paginas-->
-<body>
+<body class="">
     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
@@ -152,8 +153,8 @@
         </li>
         <li><div class="espaco-1"></div></li>
         <li>
-            <a type="submit" id="logout-Action-modal">
-            <div class="elem-menu-modal">
+            <a id="logout-Action-modal">
+            <div type="submit" class="elem-menu-modal">
             <img  class="tamanho-img-modal" src="assets/img/sair.svg">
             <p>Sair</p>
             </div>
