--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -161,18 +161,18 @@
         <div class="espaco-3"></div>
         <p class="largura-texto destaque"> Que tal aprender sobre a Doença de Chagas jogando? </p>
         <div class="espaco-3"></div>
-        <div class="destaque-sobre">
-            <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.</p>
+        <div class="sobre">
+            <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.<p>
             <ul>
             <div class="box-instrucoes-sobre">
-                <li class="list-sobre"><p> <span class="destaque-sobre"> Fase 1: </span> Você terá que associar uma imagem com a sua semelhante.</p></li>
-                <li class="list-hide-sobre"></li>
-                <li class="list-sobre"><p><span class="destaque-sobre">  Fase 2: </span>  Associar uma imagem com o seu nome. </p></li>
-                <li class="list-hide-sobre"></li>
-                <li class="list-sobre"><p> <span class="destaque-sobre"> Fase 3: </span> Associar uma imagem com o seu significado.</p></li>
+                <p><span class="destaque-sobre"> Fase 1: </span> Você terá que associar uma imagem com a sua semelhante.</p>
+                
+                <p><span class="destaque-sobre"> Fase 2: </span> Associar uma imagem com o seu nome. </p>
+                
+                <p><span class="destaque-sobre"> Fase 3: </span> Associar uma imagem com o seu significado.</p>
             </div>
             </ul>
-        <div>
+        </div>
         <div class="espaco-3"></div>
         <p class="destaque"> Desafie-se e aprenda mais!</p>
 
