--- a/vitoria.html
+++ b/vitoria.html
@@ -153,8 +153,8 @@
             </a>
         </li>
         <li>
-            <a type="submit" id="logout-Action-modal">
-            <div class="elem-menu-modal">
+            <a id="logout-Action-modal">
+            <div type="submit" class="elem-menu-modal">
             <img  class="tamanho-img-modal" src="assets/img/sair.svg">
             <p>Sair</p>
             </div>
@@ -218,6 +218,7 @@
     <script src="assets/js/nivel.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/vitoria.js"></script>
+    <script src="assets/js/menu-modal.js"></script>
     
     
 </body>
