--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 </head> 
 
-<body class = "fundo container">
+<body class="fundo1 fundo">
     <div class="espaco-1"></div>
     <div class="espaco-2"></div>
     <div class=" titulo">JOGO DA MEMÓRIA</div>
@@ -120,6 +120,9 @@
 
 <div id ="logout-Action"> </div> 
 <div id ="cadForm-form"> </div> 
+<div id ="consulta"> </div> 
+<div id ="atualizacao"> </div> 
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -132,7 +135,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
-    <!--<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>-->
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
 
     <script src="assets/js/index.js"></script>
 
