--- a/instrucoes.html
+++ b/instrucoes.html
@@ -91,21 +91,21 @@
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile col-lg-2 ajuste-direita">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"  href="index.html"> 
-                        <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg">
+                    <a class = "menu-mobile"  href="nivel.html"> 
+                    <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
             </div>
             <div class="col menu-mobile col-lg-1"></div>
             <div class="col menu-mobile col-lg-6">
                 <a class="menu-mobile"  href="index.html"> 
-                    <img class="nav-elem menu-mobile" id="logo-eic-nav-sup-desktop" src="assets/img/nav/logo-eic-nav.svg">
+                <img class="nav-elem menu-mobile" id="logo-eic-nav-sup-desktop" src="assets/img/nav/logo-eic-nav.svg">
                 </a>
             </div>
             <div class="col menu-mobile col-lg-1"></div>
             <div class="col menu-mobile col-lg-2 ajuste-esquerda">
                 <a class="menu-mobile" id="botao-menu-modal"> 
-                    <img class="nav-elem"  id="logo-nav-sup-desktop" src="assets/img/nav/menu.svg">
+                <img class="nav-elem"  id="logo-nav-sup-desktop" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
@@ -171,7 +171,7 @@
 </div>
 
         <!--Conteudo da pagina -->
-        <div class="espaco-3"></div>
+        <div class="espaco-6"></div>
         <h1 class="subtitulo-2"> INSTRUÇÕES </h1>
         <div class="espaco-3"></div>
         <p class="tamanhoP"> Para fazer pontos no jogo, você terá que associar uma imagem com sua semelhante! </p>
@@ -195,15 +195,15 @@
         <div class="espaco-6"></div>
        
         
-         <div class="col">
+        <div class="col">
             <a class="btn btn-primary btn-dificil 1" id="PlayGame" href="jogo.html"> JOGAR </a>  
         </div>
 
-    </div>
-    <div id ="loguinForm"> </div> 
-    <div id ="cadForm-form"> </div>
-    <div id ="loguin-Google"> </div>
-    <div class="card-body">
+    <div id ="loguinForm"></div> 
+    <div id ="cadForm-form"></div>
+    <div id ="loguin-Google"></div>
+    <div class="card-body"></div>
+</div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
