--- a/nivel.html
+++ b/nivel.html
@@ -187,14 +187,14 @@
     <div class="espaco-6"></div>
 
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="instrucoes.html" onclick="fase(this.id, classList[3])"> FÁCIL </a> </div>
+            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="instrucoes.html" onclick="//fase(this.id, classList[3])"> FÁCIL </a> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio 1" id="medio" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> MÉDIO  </a>
+                <a class="btn btn-primary btn-medio 1" id="medio" href="instrucoes.html"  onclick="//fase(this.id, classList[3])"> MÉDIO  </a>
             </div>
         </div>
 
@@ -202,7 +202,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </a>
+            <a class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="//fase(this.id, classList[3])"> DÍFICIL </a>
             </div>
         </div>
         <div class="espaco-6"></div>
@@ -219,10 +219,12 @@
     <script src="assets/js/menu-modal.js"></script>
     
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>   
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
 
     <script src="assets/js/nivel.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/firebase.js"></script>
+    <script src="assets/js/utils.js"></script>
 </body>
 
 </html>
