--- a/cadastrar.html
+++ b/cadastrar.html
@@ -111,7 +111,7 @@
 </div>
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/firebase.js"></script>
 
 </body>
 </html>
