--- a/nivel.html
+++ b/nivel.html
@@ -187,14 +187,14 @@
     <div class="espaco-6"></div>
 
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="instrucoes.html" onclick="//fase(this.id, classList[3])"> FÁCIL </a> </div>
+            <div class="col"><button class="btn btn-primary btn-facil 1" id ="facil"  href="instrucoes.html" onclick="fase(this.id, classList[3])"> FÁCIL </button> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio 1" id="medio" href="instrucoes.html"  onclick="//fase(this.id, classList[3])"> MÉDIO  </a>
+                <button class="btn btn-primary btn-medio 1" id="medio" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> MÉDIO  </button>
             </div>
         </div>
 
@@ -202,7 +202,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="//fase(this.id, classList[3])"> DÍFICIL </a>
+                <button class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </button>
             </div>
         </div>
         <div class="espaco-6"></div>
