teste - acertando os containeres de cartas e box-point

--- a/jogo.html
+++ b/jogo.html
@@ -84,7 +84,7 @@
     <div class="fundo">
 <!-- menu mobile-->
   <div class="espaco-0-5"> </div>
-    <div class="menu-mobile">
+    <div class="menu-mobile" width="auto">
 
         <div class="row menu-mobile">
 
@@ -217,7 +217,7 @@
   
 <!-- Painel ensinando como jogar -->
 
-<div id="container" class="flex-row"> 
+<div id="container" class="flex-row" position="center" width="auto"> 
 
     <div class="card" id="card0">
         <div class="face back">  </div>
@@ -290,7 +290,7 @@
     </div>
 
     <!--display de pontos -->
-    <div class="points-position-game">
+    <div class="points-position-game" alignment="left">
         <div id="points-box" class="points-box hide-points-box">
             <img  class="medal" src="assets/img/medalha.svg">
             <p id="points" class="points"> 100 </p>
