--- a/nivel.html
+++ b/nivel.html
@@ -225,6 +225,7 @@
     <script src="assets/js/nivel.js"></script>
     <script src="assets/js/firebase.js"></script>
     <script src="assets/js/utils.js"></script>
+    <script src="assets/js/nivelBot.js"></script>
 </body>
 
 </html>
