--- a/vitoria.html
+++ b/vitoria.html
@@ -189,11 +189,12 @@
 
         <div class="row display-center" id ="DispBtns">
             <div class="col-lg-3">
-                    <a class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </a>  
+                <button class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </button>  
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-3">
-                    <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
+                <button class="btn btn-primary btn-next" href="" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
+                
             </div>
         </div>
     </div>
