--- a/nivel.html
+++ b/nivel.html
@@ -226,6 +226,7 @@
     <script src="assets/js/firebase.js"></script>
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/nivelBot.js"></script>
+    <script src="assets/js/pontos.js"></script>
 </body>
 
 </html>
