Para não perder as modificações

--- a/jogo.html
+++ b/jogo.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
-
-    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/quit-modal.css">
@@ -21,7 +20,6 @@
 
 <body>
  <!-- menu Desktop -->
-
      <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
@@ -81,7 +79,7 @@
         </ul>
     </div>
 
-    <div class="fundo">
+<div class="fundo">
 <!-- menu mobile-->
   <div class="espaco-0-5"> </div>
     <div class="menu-mobile" width="auto">
@@ -173,12 +171,7 @@
 
 <!-- Conteúdo da página -->
 
-    <div class="espaco-0-5"> </div>
-    <div class="row menu-desktop">
-        <div id="btn-voltar-d">
-            <img class="img-voltar" src="assets/img/nav/voltar.svg" data-toggle="modal" data-target="#exampleModalCenter">
-        </div>
-    </div>
+   
 
 <!-- Fim opção sair --> 
 
@@ -208,7 +201,13 @@
     </div>
   </div>
 </div>
-
+<div class="col-lg-8">
+<div class="espaco-0-5"> </div>
+<div class="row menu-desktop">
+    <div id="btn-voltar-d">
+        <img class="img-voltar" src="assets/img/nav/voltar.svg" data-toggle="modal" data-target="#exampleModalCenter">
+    </div>
+</div>
 <!--jogo-->
     <div class="espaco-0-5"></div>
     <div class="subtitulo-2" id="titulo-jogo">MEMORIZE AS POSIÇÕES</div>
@@ -288,16 +287,16 @@
     <img src="assets/img/match.png" id="imgMatchSing" class="hideMatchSing"/> 
     
     </div>
-
+    
     <!--display de pontos -->
-    <div class="points-position-game" alignment="left">
+    <div class="points-position-game">
         <div id="points-box" class="points-box hide-points-box">
             <img  class="medal" src="assets/img/medalha.svg">
             <p id="points" class="points"> 100 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
         </div>
     <!--Fim  painel  -->
-
+</div>
     </div>
     <div id ="loguinForm"> </div> 
     <div id ="cadForm-form"> </div>
