Corrigindo problemas de bootstrap e css (Desktop)
1) botões cortados (página de vitória);
2) container de cartas cortado (jogo em monitor 1024 x 768);
3) sinal de match estava enorme, foi diminuído o tamanho;
4) menu-desktop lateral estava cortado: corrigido;
5) fundo;

--- a/vitoria.html
+++ b/vitoria.html
@@ -188,11 +188,11 @@
         <div class="espaco-3"></div>
 
         <div class="row display-center" id ="DispBtns">
-            <div class="col-lg-3">
+            <div class="col-lg">
                 <button class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </button>  
             </div>
-            <div class="col-lg-2"></div>
-            <div class="col-lg-3">
+            
+            <div class="col-lg">
                 <button class="btn btn-primary btn-next" href="" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
                 
             </div>
