--- a/jogo.html
+++ b/jogo.html
@@ -201,7 +201,7 @@
     </div>
   </div>
 </div>
-<div class="col-lg-8">
+<div class="col-md-12 col-lg-12">
 <div class="espaco-0-5"> </div>
 <div class="row menu-desktop">
     <div id="btn-voltar-d">
