Ajustes nas páginas "index" e "sobre o jogo"
Ajustes para versão desktop, telas:

1920 x 1080
1600 x 900
1024 x 768

--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -164,12 +164,12 @@
         <div class="sobre">
             <p> O jogo da memória é composto por três fases com grau de dificuldade crescente.<p>
             <ul>
-            <div class="box-instrucoes-sobre">
-                <p><span class="destaque-sobre"> Fase 1: </span> Você terá que associar uma imagem com a sua semelhante.</p>
+            <div >
+                <p><span > Fase 1: </span> Você terá que associar uma imagem com a sua semelhante.</p>
                 
-                <p><span class="destaque-sobre"> Fase 2: </span> Associar uma imagem com o seu nome. </p>
+                <p><span > Fase 2: </span> Associar uma imagem com o seu nome. </p>
                 
-                <p><span class="destaque-sobre"> Fase 3: </span> Associar uma imagem com o seu significado.</p>
+                <p><span > Fase 3: </span> Associar uma imagem com o seu significado.</p>
             </div>
             </ul>
         </div>
