Desbloqueio de níveis e ativação do botão "Refazer Fase"

--- a/vitoria.html
+++ b/vitoria.html
@@ -189,11 +189,11 @@
 
         <div class="row display-center" id ="DispBtns">
             <div class="col-lg">
-                <button class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </button>  
+                <a class="btn btn-primary btn-playAgain 0" href="jogo.html" id="again" onclick="playAgain(this.classList[3])"> REFAZER FASE  </a>  
             </div>
             
             <div class="col-lg">
-                <button class="btn btn-primary btn-next" href="" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
+                <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
                 
             </div>
         </div>
