--- a/vitoria.html
+++ b/vitoria.html
@@ -193,7 +193,7 @@
             </div>
             
             <div class="col-lg">
-                <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
+                <button class="btn btn-primary btn-next" href="" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
                 
             </div>
         </div>
