Alterações de fluxo.
Aparecimento da página de fim.

--- a/fim.html
+++ b/fim.html
@@ -34,7 +34,7 @@
         <a href=" menu-desktop index.html"> </a>
 
         <li class="menu-desktop">
-            <a href="index.html">
+            <a href="nivel.html">
             <div class=" menu-desktop elem-menu-lateral">
             <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
@@ -120,7 +120,7 @@
             </a>
         </li>
         <li>
-            <a href="index.html">
+            <a href="nivel.html">
             <div class= "elem-menu-modal">
             <img class="tamanho-img-modal" src="assets/img/home.svg">
             <p> Início <p> 
@@ -203,9 +203,6 @@
         <div class="col">
             <a class="btn btn-primary btn-medio" href="nivel.html" id="inicio" > Início </a>  
         </div>
-        <div class="col">
-            <a class="btn btn-primary btn-medio"  id="salvar" >Salvar Pontuação</a>  
-        </div>
        
         <!--
         <div class="espaco-1"></div>
@@ -226,12 +223,16 @@
     <div id ="cadForm-form"> </div>
     <div id ="loguin-Google"> </div>
     <div class="card-body">
+    
+    <script>
 
+    </script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/level.js"></script>
+    <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/fim.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
