--- a/vitoria.html
+++ b/vitoria.html
@@ -193,8 +193,7 @@
             </div>
             
             <div class="col-lg">
-                <button class="btn btn-primary btn-next" href="" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
-                
+                <button class="btn btn-primary btn-next" id="next" onclick="fase(this.classList[3], this.classList[4])">PRÓXIMA FASE </button> 
             </div>
         </div>
     </div>
@@ -218,7 +217,6 @@
 
     <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/nivel.js"></script>
-    <script src="assets/js/index.js"></script>
     <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/firebase.js"></script>
