Melhorias de responsividade.

--- a/jogo.html
+++ b/jogo.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body class="fundo">
  <!-- menu Desktop -->
      <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
@@ -81,13 +81,12 @@
 
 <div class="fundo">
 <!-- menu mobile-->
-  <div class="espaco-0-5"> </div>
     <div class="menu-mobile" width="auto">
 
         <div class="row menu-mobile">
 
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
-            <div class="col menu-mobile col-lg-2 ajuste-direita">
+            <div class="col menu-mobile col-lg-2 ">
                 <div id="btn-voltar-m">
                     <a class = "menu-mobile"> 
                         <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg" data-toggle="modal" data-target="#exampleModalCenter">
@@ -216,7 +215,7 @@
   
 <!-- Painel ensinando como jogar -->
 
-<div id="container" class="flex-row" position="center" width="auto"> 
+<div id="container" class="flex-row" position="relative" width="auto"> 
 
     <div class="card" id="card0">
         <div class="face back">  </div>
@@ -296,8 +295,8 @@
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
         </div>
     <!--Fim  painel  -->
-</div>
     </div>
+</div>
     <div id ="loguinForm"> </div> 
     <div id ="cadForm-form"> </div>
     <div id ="loguin-Google"> </div>
