--- a/nivel.html
+++ b/nivel.html
@@ -17,7 +17,7 @@
     
 </head>
 <!--Colar o novo menu desktop em todas as outras paginas-->
-<body>
+<body class="fundo">
     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
@@ -79,8 +79,9 @@
     <!--Fim menu desktop -->
 
     <div class="fundo">
+    <div class="espaco-0-5"> </div>
 <!-- menu mobile- colocar nas outras paginas-->
-    <div class="menu-mobile">
+    <div class="menu-mobile" width="auto">
         <div class="row menu-mobile">
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile col-lg-2 ajuste-direita">
