Alinhamento da box points
Foi feito o alinhamento da box points, mas ainda não foi resolvido o problema da soma das pontuações das fases, está mostrando apenas a pontuação da fase 3 no final. Precisa ser resolvido.

--- a/vitoria.html
+++ b/vitoria.html
@@ -217,7 +217,7 @@
 
     <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/nivel.js"></script>
-    <script src="assets/js/vitoria.js"></script>
+    <script src="assets/js/fim.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/firebase.js"></script>
     <script src="assets/js/utils.js"></script>
