--- a/jogo.html
+++ b/jogo.html
@@ -307,6 +307,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/jogo.js"></script>
+    <script src="/assets/js/fim.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
