Voltando a uma versão antiga

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -39,36 +39,36 @@
 
         <li class="menu-desktop">
             <a href="index.html">
-            <div class=" menu-desktop elem-menu-lateral">
-            <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-            <p class="menu-desktop"> Início <p> 
-            <div>
+                <div class=" menu-desktop elem-menu-lateral">
+                    <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
+                    <p class="menu-desktop"> Início <p> 
+                <div>
             </a>
         </li>
         <li class = "menu-desktop espaco-2"></li>
         <li>
             <a  class="menu-desktop" href="sobre-o-jogo.html">
-            <div class=" menu-desktop elem-menu-lateral">
-            <img  class="menu-desktop" src="assets/img/sobre-o-jogo.svg">
-            <p class="menu-desktop"> Sobre o jogo <p> 
-            <div>
+                <div class=" menu-desktop elem-menu-lateral">
+                    <img  class="menu-desktop" src="assets/img/sobre-o-jogo.svg">
+                    <p class="menu-desktop"> Sobre o jogo <p> 
+                <div>
             </a>
         </li>
         <li class="menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="creditos.html">
-            <div class="menu-desktop elem-menu-lateral">
-            <img class="menu-desktop" src="assets/img/creditos.svg">
-            <p class="menu-desktop"> Créditos <p> 
-            <div>
+                <div class="menu-desktop elem-menu-lateral">
+                    <img class="menu-desktop" src="assets/img/creditos.svg">
+                    <p class="menu-desktop"> Créditos <p> 
+                <div>
             </a>
         </li>
         <li class = "menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="compartilhar.html">
-            <div class="menu-desktop elem-menu-lateral">
-            <img  class="menu-desktop" src="assets/img/compartilhar.svg">
-            <p class="menu-desktop"> Compartilhar <p> 
+                <div class="menu-desktop elem-menu-lateral">
+                    <img  class="menu-desktop" src="assets/img/compartilhar.svg">
+                    <p class="menu-desktop"> Compartilhar <p> 
             <div>
             </a>
         </li>
@@ -109,44 +109,44 @@
     <ul class="list-modal">
          <li>
             <a href="index.html">
-            <div class= "logo-modal">
-            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
-            <div>
+                <div class= "logo-modal">
+                    <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+                <div>
             </a>
         </li>
         <li>
             <a href="index.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/home.svg">
-            <p> Início <p> 
-            <div>
+                <div class= "elem-menu-modal">
+                    <img class="tamanho-img-modal" src="assets/img/home.svg">
+                    <p> Início <p> 
+                <div>
             </a>
         </li>
         <li><div class="espaco-1"></div></li>
          <li>
             <a href="sobre-o-jogo.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/sobre-o-jogo.svg">
-            <p> Sobre o Jogo <p> 
-            <div>
+                <div class= "elem-menu-modal">
+                    <img class="tamanho-img-modal" src="assets/img/sobre-o-jogo.svg">
+                    <p> Sobre o Jogo <p> 
+                <div>
             </a>
         </li>
         <li><div class="espaco-1"></div></li>
          <li>
             <a href="creditos.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/creditos.svg">
-            <p> Créditos <p> 
-            <div>
+                <div class= "elem-menu-modal">
+                    <img class="tamanho-img-modal" src="assets/img/creditos.svg">
+                    <p> Créditos <p> 
+                <div>
             </a>
         </li>
          <li><div class="espaco-1"></div></li>
          <li>
             <a href="compartilhar.html">
-            <div class= "elem-menu-modal">
-            <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
-            <p> Compartilhar <p> 
-            <div>
+                <div class= "elem-menu-modal">
+                    <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
+                    <p> Compartilhar <p> 
+                <div>
             </a>
         </li>
     </ul>
@@ -160,9 +160,9 @@
 <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div class="btn-voltar-ms">
-       <a href="index.html">
-            <img class="img-voltar" src="assets/img/nav/voltar.svg">
-             </a>
+            <a href="index.html">
+                <img class="img-voltar" src="assets/img/nav/voltar.svg">
+            </a>
         </div>
     </div>
     
@@ -181,9 +181,8 @@
             <div> 
                  <div data-href="">
                     <a target="_blank"
-                    id="facebook-share-btt" rel="nofollow"  class="facebook-share-button"
-                    href="">
-                     <img src="assets/img/redesSociais/btn-facebook.svg"></a>
+                    id="facebook-share-btt" rel="nofollow"  class="facebook-share-button" href="">
+                        <img src="assets/img/redesSociais/btn-facebook.svg"></a>
                     </a>
                 </div>
             </div>
@@ -223,16 +222,16 @@
 
     <div class="display-center">
         <div class = "elem-btn-c">
-        <div> <a href="https://www.facebook.com/EIC.USP/"> <img src="assets/img/redesSociais/btn-facebook-line.svg"></a></div>
+            <div> <a href="https://www.facebook.com/EIC.USP/"> <img src="assets/img/redesSociais/btn-facebook-line.svg"></a></div>
         </div>
         <div class = "elem-btn-c">
-        <div> <a href="https://www.instagram.com/eiciencia"><img src="assets/img/redesSociais/btn-insta-line.svg"></a></div>
+            <div> <a href="https://www.instagram.com/eiciencia"><img src="assets/img/redesSociais/btn-insta-line.svg"></a></div>
         </div>
         <div class = "elem-btn-c">
-        <div> <a href="https://www.youtube.com/c/EspaçoInterativodeCiências"><img src="assets/img/redesSociais/btn-youtube-line.svg"> </a></div>
+            <div> <a href="https://www.youtube.com/c/EspaçoInterativodeCiências"><img src="assets/img/redesSociais/btn-youtube-line.svg"> </a></div>
         </div>
-         <div class = "elem-btn-c">
-        <div> <a href="https://eic.ifsc.usp.br/"><img src="assets/img/redesSociais/btn-site-line.svg"> </a></div>
+        <div class = "elem-btn-c">
+            <div> <a href="https://eic.ifsc.usp.br/"><img src="assets/img/redesSociais/btn-site-line.svg"> </a></div>
         </div>
     </div>
 <!--Botao facebook-->
