--- a/instrucoes.html
+++ b/instrucoes.html
@@ -207,6 +207,11 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/instrucoes.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>    
+    <script src="assets/js/nivel.js"></script>
+    <script src="assets/js/firebase.js"></script>
     
     
 </body>
