--- a/jogo.html
+++ b/jogo.html
@@ -310,7 +310,13 @@
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/jogo.js"></script>
     <script src="/assets/js/fim.js"></script>
-    <script src="assets/js/nivel.js"></script>
+    <script src="assets/js/nivel.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
+    <script src="assets/js/firebase.js"></script>
+ 
+
    
 </body>
 
