--- a/instrucoes.html
+++ b/instrucoes.html
@@ -117,7 +117,7 @@
              <li>
                 <a href="index.html">
                     <div class= "logo-modal">
-                        <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+                        <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.svg">
                     <div>
                 </a>
             </li>
