--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -25,7 +25,7 @@
         <li class = "espaco-6 menu-desktop"></li>
         <li> 
             <a class="menu-desktop" href="index.html"> 
-                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
+                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.svg">
             </a>
         </li>
         <li class = "menu-desktop espaco-6"></li>
@@ -101,7 +101,7 @@
                 <li>
                     <a href="index.html">
                         <div class= "logo-modal">
-                            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+                            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.svg">
                         <div>
                     </a>
                 </li>
