Redefiniçao de senha e cadastro funcionando.

--- a/fim.html
+++ b/fim.html
@@ -174,7 +174,7 @@
         <div class="espaco-3"></div>
         <!-- botões -->
         <div class="">
-            <a class="btn btn-primary btn-medio" href="index.html" id="inicio" > INÍCIO  </a>  
+            <a class="btn btn-primary btn-medio" href="nivel.html" id="inicio" > INÍCIO  </a>  
         </div>
 
         <div class="espaco-1-5"></div>
