ocultação do botão Refazer Fase

--- a/vitoria.html
+++ b/vitoria.html
@@ -149,7 +149,7 @@
         </div>
 
         <!--Conteudo da pagina -->
-        <div class="espaco-3"></div>
+        <div class="espaco-6"></div>
         <div id="trofeu">
             <img src="assets/img/trofeu.png">
         </div>
@@ -157,7 +157,7 @@
         <div class="titulo-vitoria">VOCÊ GANHOU!</div>
         <div class="espaco-1"></div>
         <div class="subtitulo-vitoria">Sua pontuação nessa fase foi: </div>
-        <div class="espaco-3"></div>
+        <div class="espaco-6"></div>
 
         <!-- Fazer os botoes responsivos, ficar um cada linha quando diminuir a tela -->
         <div class="display-center">
@@ -168,14 +168,14 @@
             </div>
         </div>
 
-        <div class="espaco-3"></div>
+        <div class="espaco-4"></div>
 
         <div class="row display-center" id ="DispBtns">
             <div class="col-lg">
                 <a class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </a>  
-            </div>
+            </div> 
 
-            <div class="col-lg">
+            <div class="col-lg-12">
                 <a class="btn btn-primary btn-next" href="instrucoes.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
             </div>
         </div>
