correção do modal sair do jogo e créditos

--- a/creditos.html
+++ b/creditos.html
@@ -211,6 +211,12 @@
             <div class="row">
                 <p class="creditos">Ana Luiza Martins Cesario (versão 2.0)</p>
             </div>
+            <div class="row">
+                <p class="creditos">Isaías Carvalhaes de Oliveira (versão 2.0)</p>
+            </div>
+            <div class="row">
+                <p class="creditos">Juliana da Silva Santos (versão 2.0)</p>
+            </div>
             <div class="espaco-1-5"></div>
             <div class="row">
                 <p class="destaque">CONTEÚDO </p>
