encurtamento de código

--- a/jogo.html
+++ b/jogo.html
@@ -280,7 +280,7 @@
             </div>
 
             <!--Perguntar sobre uma imagem melhor para colocar aqui-->
-            <img src="assets/img/match.png" id="imgMatchSign" class="hideMatchSing"/> 
+            <img src="assets/img/match.png" id="imgMatchSign" class="hideMatchSign"/> 
         
         </div>
         
