ajustes de estilização

--- a/sobre-o-jogo.html
+++ b/sobre-o-jogo.html
@@ -170,7 +170,7 @@
                 
                 <p><span > Fase 2: </span> Associar uma imagem com o seu nome. </p>
                 
-                <p><span > Fase 3: </span> Associar uma imagem com o seu significado.</p>
+                <p><span > Fase 3: </span> Associar um nome com o seu significado.</p>
             </div>
             </ul>
         </div>
