Configuração de detalhes

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -19,12 +19,12 @@
     
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
             <li class = "espaco-6 menu-desktop"></li>
             <li>
-                <a class="menu-desktop" href="index.html"> 
+                <a class="menu-desktop" href="https://eic.ifsc.usp.br/" target="_blank"> 
                     <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.svg">
                 </a>
             </li>
