--- a/fim.html
+++ b/fim.html
@@ -23,7 +23,7 @@
         <ul class="menu-desktop tipoUL">
             <li class = "espaco-6 menu-desktop"></li>
             <li>
-                <a class="menu-desktop" href="index.html"> 
+                <a class="menu-desktop" href="https://eic.ifsc.usp.br/" target="_blank"> 
                     <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.svg">
                 </a>
             </li>
@@ -103,7 +103,7 @@
         <div id="menu-modal" class="menu-mobile">
             <ul class="list-modal">
                 <li>
-                    <a href="index.html">
+                    <a href="https://eic.ifsc.usp.br/" target="_blank">
                         <div class= "logo-modal">
                             <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.svg">
                         </div>
