--- a/vitoria.html
+++ b/vitoria.html
@@ -33,7 +33,7 @@
             <a href=" menu-desktop index.html"> </a>
 
             <li class="menu-desktop">
-                <a href="index.html">
+                <a href="https://eic.ifsc.usp.br/" target="_blank">
                     <div class=" menu-desktop elem-menu-lateral">
                         <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
                         <p class="menu-desktop"> Início </p> 
@@ -102,7 +102,7 @@
         <div id="menu-modal" class="menu-mobile">
             <ul class="list-modal">
                 <li>
-                    <a href="index.html">
+                    <a href="https://eic.ifsc.usp.br/" target="_blank">
                         <div class= "logo-modal">
                             <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.svg">
                         </div>
