--- a/compartilhar.html
+++ b/compartilhar.html
@@ -38,10 +38,10 @@
         <a href=" menu-desktop index.html"> </a>
 
         <li class="menu-desktop">
-            <a href="index.html">
+            <a href="nivel.html">
                 <div class=" menu-desktop elem-menu-lateral">
                     <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                    <p class="menu-desktop"> Início <p> 
+                    <p class="menu-desktop"> Nível <p> 
                 <div>
             </a>
         </li>
@@ -115,10 +115,10 @@
             </a>
         </li>
         <li>
-            <a href="index.html">
+            <a href="nivel.html">
                 <div class= "elem-menu-modal">
                     <img class="tamanho-img-modal" src="assets/img/home.svg">
-                    <p> Início <p> 
+                    <p> Nível <p> 
                 <div>
             </a>
         </li>
@@ -160,7 +160,7 @@
 <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div class="btn-voltar-ms">
-            <a href="index.html">
+            <a href="nivel.html">
                 <img class="img-voltar" src="assets/img/nav/voltar.svg">
             </a>
         </div>
