--- a/creditos.html
+++ b/creditos.html
@@ -32,10 +32,10 @@
         <a href=" menu-desktop index.html"> </a>
 
         <li class="menu-desktop">
-            <a href="index.html">
+            <a href="nivel.html">
                 <div class=" menu-desktop elem-menu-lateral">
                     <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                    <p class="menu-desktop"> Início <p> 
+                    <p class="menu-desktop"> Nível <p> 
                 <div>
             </a>
         </li>
@@ -112,10 +112,10 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="nivel.html">
                     <div class= "elem-menu-modal">
                         <img class="tamanho-img-modal" src="assets/img/home.svg">
-                        <p> Início <p> 
+                        <p> Nível <p> 
                     <div>
                 </a>
             </li>
@@ -170,8 +170,8 @@
     <div class="menu-desktop">
     <div class="espaco-3"></div>
     <div class="row">
-    <div class="col col-lg-1"></div>
-        <div class="col col-lg-4">
+    <div class="col col-lg-2"></div>
+        <div class="col col-lg-5">
             <div class="row">
                 <!--Os titulos não estão ficando no centro como eu gostaria no desktop-->
                 <p class="destaque">COORDENAÇÃO GERAL </p>
@@ -199,6 +199,9 @@
             </div>
             <div class="row">
                 <p class="creditos">Simone Ferreira Souza (versão 2.0)</p>
+            </div>
+            <div class="row">
+                <p class="creditos">Thiago Nicola Cajuela Garcia (versão 2.0)</p>
             </div>
         </div>
         <div class="col col col-lg-5">
@@ -262,6 +265,7 @@
             <div class="espaco-1-5"></div>
             <p class="destaque">GESTÃO DO PROJETO </p>
             <p class="creditos"> Simone F. Souza (versão 2.0) </p>
+            <p class="creditos">Thiago N. C. Garcia (versão 2.0)</p>
             <div class="espaco-1-5"></div>
             <p class="destaque">DESENVOLVIMENTO DO SOFTWARE </p>
             <p class="creditos"> Claudinei Caetano de Souza (versão 1.0) </p>
