--- a/fim.html
+++ b/fim.html
@@ -32,10 +32,10 @@
             <a href=" menu-desktop index.html"> </a>
 
             <li class="menu-desktop">
-                <a href="index.html">
+                <a href="nivel.html">
                     <div class=" menu-desktop elem-menu-lateral">
                         <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                        <p class="menu-desktop"> Início </p> 
+                        <p class="menu-desktop"> Nível </p> 
                     </div>
                 </a>
             </li>
@@ -110,10 +110,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="nivel.html">
                         <div class= "elem-menu-modal">
                             <img class="tamanho-img-modal" src="assets/img/home.svg">
-                            <p> Início </p> 
+                            <p> Nível </p> 
                         </div>
                     </a>
                 </li>
@@ -174,7 +174,7 @@
         <div class="espaco-3"></div>
         <!-- botões -->
         <div class="">
-            <a class="btn btn-primary btn-medio" href="nivel.html" id="inicio" > INÍCIO  </a>  
+            <a class="btn btn-primary btn-medio" href="nivel.html" id="inicio" > ESCOLHER NÍVEL  </a>  
         </div>
 
         <div class="espaco-1-5"></div>
@@ -185,11 +185,11 @@
 
         <div class="espaco-4"></div>
 
-        <div class="hideProx">
+        <!-- <div class="hideProx">
             <div class="col">
                 <a class="btn btn-primary btn-facil" href="nivel.html" id="prox" onclick="fase(classList[3], '1')" > PRÓXIMO NÍVEL </a> 
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
