--- a/vitoria.html
+++ b/vitoria.html
@@ -33,10 +33,10 @@
             <a href=" menu-desktop index.html"> </a>
 
             <li class="menu-desktop">
-                <a href="https://eic.ifsc.usp.br/" target="_blank">
+                <a href="nivel.html" target="_blank">
                     <div class=" menu-desktop elem-menu-lateral">
                         <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                        <p class="menu-desktop"> Início </p> 
+                        <p class="menu-desktop"> Nível </p> 
                     </div>
                 </a>
             </li>
@@ -109,10 +109,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="nivel.html">
                         <div class= "elem-menu-modal">
                             <img class="tamanho-img-modal" src="assets/img/home.svg">
-                            <p> Início </p> 
+                            <p> Nível </p> 
                         </div>
                     </a>
                 </li>
