--- a/cadastrar.html
+++ b/cadastrar.html
@@ -33,10 +33,10 @@
             <a href=" menu-desktop index.html"> </a>
 
             <li class="menu-desktop">
-                <a href="index.html">
+                <a href="nivel.html">
                     <div class=" menu-desktop elem-menu-lateral">
                         <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                        <p class="menu-desktop"> Início </p>
+                        <p class="menu-desktop"> Nível </p>
                     </div>
                 </a>
             </li>
