--- a/instrucoes.html
+++ b/instrucoes.html
@@ -34,10 +34,10 @@
         <a href=" menu-desktop index.html"> </a>
 
         <li class="menu-desktop">
-            <a href="index.html">
+            <a href="nivel.html">
                 <div class=" menu-desktop elem-menu-lateral">
                     <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
-                    <p class="menu-desktop"> Início <p> 
+                    <p class="menu-desktop"> Nível <p> 
                 <div>
             </a>
         </li>
@@ -122,10 +122,10 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="nivel.html">
                     <div class= "elem-menu-modal">
                         <img class="tamanho-img-modal" src="assets/img/home.svg">
-                        <p> Início <p> 
+                        <p> Nível <p> 
                     <div>
                 </a>
             </li>
