--- a/creditos.html
+++ b/creditos.html
@@ -80,7 +80,7 @@
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile col-lg-2 ajuste-direita">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"  href="index.html"> 
+                    <a class = "menu-mobile"  href="nivel.html"> 
                         <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
@@ -156,7 +156,7 @@
 <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div class="btn-voltar-ms">
-            <a href="index.html">
+            <a href="nivel.html">
                 <img class="img-voltar" src="assets/img/nav/voltar.svg">
             </a>
         </div>
