--- a/compartilhar.html
+++ b/compartilhar.html
@@ -208,9 +208,9 @@
      </div>
 
      <div class="espaco-3"></div>
-        <div class="container-line"> 
-            <h1 class="line display-center"></h1>
-        </div>
+     <div class="container-line" style="display: flex !important; justify-content: center !important;">
+        <h1 class="line display-center" style="display: flex !important; width: 200px !important;  position: initial !important;"></h1>
+    </div>
      <div class="espaco-3"></div>
 
 
